# PFM-IO

./: .gitignore  CMakeLists.txt  README.md
data/: f1.pfm  f3.pfm
data_io/: Iun.pfm  N_guide.pfm  diff_zenith.pfm  phi.pfm  rho.pfm  sgbm_depth_img.pfm  sgbm_normal_img.pfm  theta_spec.pfm
matlab/: loadPFM.m  pfm_io.m  savePFM.m
scripts/: convertMat2Pfm.py  pfm_io.py
src/: PFMReadWrite.cpp  PFMReadWrite.h  main.cpp  pfm_main.cpp  pfm_test.cpp
